# pycmplot

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  pycmplot_python_api.ipynb  pyproject.toml  setup.cfg
benchmark/: README.md  bench_python.py  bench_r.r  bench_r_timed.sh  build_composite_figure.py  cmplot_job.sbatch  collect_results.py  generate_multi_sumstats.py  generate_sumstats.py  gwas_bench_py.yml  gwas_bench_r.yml  gwaslab_job.sbatch  pycmplot_job.sbatch  qmplot_job.sbatch  qqman_job.sbatch  submit_benchmarks.sh  summary.csv
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  license.rst  pycmplot_python_api.ipynb  quickstart.rst  requirements.txt
docs/_build/: .buildinfo  .buildinfo.bak  changelog.html  cli.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pycmplot_python_api.html  python_api_notebook.html  quickstart.html  search.html  searchindex.js
docs/_build/.doctrees/: changelog.doctree  cli.doctree  index.doctree  installation.doctree  license.doctree  pycmplot_python_api.doctree  python_api_notebook.doctree  quickstart.doctree
docs/_build/.doctrees/api/: annotation.doctree  constants.doctree  index.doctree  io.doctree  liftover.doctree  plotting.doctree  resources.doctree  stats.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/pycmplot/: annotation.html  io.html  liftover.html  resources.html  stats.html
docs/_build/_sources/: changelog.rst.txt  cli.rst.txt  index.rst.txt  license.rst.txt  pycmplot_python_api.ipynb.txt  quickstart.rst.txt
docs/_build/_sources/api/: liftover.rst.txt  plotting.rst.txt  resources.rst.txt  stats.rst.txt
docs/_build/_static/: custom.css
docs/_build/api/: annotation.html  constants.html  index.html  io.html  liftover.html  plotting.html  resources.html  stats.html
docs/_build/doctrees/: changelog.doctree  cli.doctree  contributing.doctree  index.doctree  installation.doctree  license.doctree  pycmplot_python_api.doctree  python_api_notebook.doctree  quickstart.doctree
docs/_build/doctrees/api/: annotation.doctree  constants.doctree  index.doctree  io.doctree  liftover.doctree  plotting.doctree  resources.doctree  stats.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  changelog.html  cli.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pycmplot_python_api.html  pycmplot_python_api.ipynb  python_api_notebook.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  cli.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  python_api_notebook.doctree  quickstart.doctree
docs/api/: annotation.rst  liftover.rst
pycmplot/: __init__.py  __main__.py  _core.py  annotation.py  cli.py  constants.py  io.py  liftover.py  resources.py  stats.py
pycmplot/newsfragments/: 1234.bugfix
pycmplot/plotting/: __init__.py  circular.py  linear.py  qq.py
pycmplot/pycmplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+36 files in other folders)
