[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycmplot"
version = "0.1.5"
description = "Multi-track circular and linear Manhattan plot generation for GWAS summary statistics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kevin Esoh", email = "kesohku1@jhmi.edu" }]
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "pillow>=9.0",
    "pycirclize>=0.6",
    "natsort>=8.0",
    "adjustText>=0.8",
    "pyliftover>=0.4",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.package-data]
pycmplot = ["data/*"]

[project.scripts]
pycmplot = "pycmplot._core:main"

[tool.setuptools.packages.find]
where = ["."]
