[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycmplot"
version = "0.2.2-patch01"
description = "Multi-track circular and linear Manhattan plot generation for GWAS summary statistics"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
authors = [{ name = "Kevin Esoh", email = "kesohku1@jh.edu" }]
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "pillow>=9.0",
    "pycirclize>=0.6",
    "natsort>=8.0",
    "adjustText>=0.8",
    "pyliftover>=0.4",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "towncrier", "sphinx"]

[tool.setuptools.package-data]
pycmplot = ["data/*"]

[project.scripts]
pycmplot = "pycmplot._core:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "dist*", "changelog.d*", "build-pypi-package.md", 
    "pycmplot_python_api.ipynb", "mit-license.txt", 
    "pycmplot_docs", "docs", "CHANGELOG.rst"
]


[tool.towncrier]
package = "pycmplot"
package_dir = "pycmplot"
filename = "CHANGELOG.rst"
directory = "changelog.d"
title_format = "Version {version} ({project_date})"
issue_format = "`#{issue} <https://github.com/esohkevin/pycmplot/issues/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
