[metadata]
name = pycmplot
version = 0.2.7
author = Kevin Esoh
author_email = kesohku1@jh.edu
description = Multi-track circular and linear Manhattan plot generation for GWAS summary statistics

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=1.5
    numpy>=1.23
    matplotlib>=3.6
    pillow>=9.0
    pycirclize>=0.6
    natsort>=8.0
    adjustText>=0.8
    pyliftover>=0.4

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    pycmplot = pycmplot._core:main
